Stream.toList since Java 16